# HUSTLYRM-Training-Documents

./: README.md
第一次：算法基础/资料/: vim.txt
第三次/: ch3：坐标变换基础.pptx  第三次培训任务.md
第三次：坐标变换基础/: 第三次培训任务.md
第三次：坐标变换基础/demos/pnp_demo/: CMakeLists.txt  README.md  stepTest.cpp  test.cpp  test.h
第三次：坐标变换基础/demos/pnp_demo/log/: CMakeLists.txt  Logger.cpp  Logger.h
第三次：坐标变换基础/demos/pnp_demo/solve/: CMakeLists.txt  Solver.cpp  Solver.h
第五次：深度学习基础/NN&DL一些个人入门推荐/: links.docx
